Trying to fix jobs schedule plotting in analysis script

--- a/results/web_template/index.html
+++ b/results/web_template/index.html
@@ -62,7 +62,7 @@
                     <img src="static/iovolume.png" alt="iovolume">
                 </figure>
 
-                <h2>Job schedule</h2>
+                <h2>Jobs schedule</h2>
 
                 <figure style="width:90%; margin:auto;">
                     <img src="static/schedule.png" alt="schedule">
