Reducing the number of calibration iterations to 20 Updating MAX_PIPELINE to display the last two pipelines (+ current one) max_[read/write]_node_cnt increased from 10 to 20 Threshold for copy (before read / after write) updated to 1GB (reads over 1GB are not triggering a copy) and 2Gb (writes over 2GB are not triggering a copy) Cleanup threshold remove from calibration and set to a fixed 0.45 value for the calibration base config. IO buffer size now displayed on static pages (still a fixed parameter, not used during calibration) Dataset updated : now jobs with more than 100MB (read/write) volume have a read / write phase (used to be a 200MB threshold)

--- a/results/web_template/result_page.html
+++ b/results/web_template/result_page.html
@@ -29,7 +29,7 @@
             <h1>Storalloc Calibration Results</h1>
             <ul>
                 <li>From commit <a href="https://gitlab.inria.fr/jmonniot/storalloc_wrench/-/commit/{{ commit_sha }}">
-                        {{commit_sha}}</a> on branch <strong>{{ commit_ref }}</strong> at {{ commit_ts}}
+                        {{commit_sha}}</a> on branch <strong>{{ commit_ref }}</strong> on {{ commit_ts}}
                 </li>
                 <li>Commit message:
                     <pre><code>{{ commit_description }}</code></pre>
@@ -38,6 +38,9 @@
                         }}</a></li>
                 <li>Analysis Job ID <em>{{ job_id }}</em></li>
                 <li>Number of iterations for calibration (after initial // run) : <em>{{calibration_iter}}</em></li>
+                <li>Buffer size (storage / permanent storage) : <em>{{stor_buff_size}}</em> /
+                    <em>{{pstor_buff_size}}</em>
+                </li>
             </ul>
 
             <section id="accordions">
