Switching back to max IO nodes = 10 (instead of 20, the simulation time was increasing too much) !! Attempting to use ztest values (runtime + iotime) instead of pearson + cohen d for optimzation metric Running with 40 calibration runs (the simulation time should be quite low for each iteration...)

--- a/results/web_template/result_page.html
+++ b/results/web_template/result_page.html
@@ -64,6 +64,8 @@
                     <li><strong>Mean runtime (simulation)</strong> : <kbd>{{ mean_sim_runtime }}</kbd></li>
                     <li><strong>Pearson's correlation</strong> : <kbd>{{ runtime_correlation }}</kbd></li>
                     <li><strong>Cohen's d effect</strong> : <kbd>{{ runtime_cohend_effect }}</kbd></li>
+                    <li><strong>Z-test stat : </strong> : <kbd>{{ ztest_runtime_tstat }}</kbd> / <strong>Z-test
+                            pvalue</strong> : <kbd>{{ ztest_runtime_pvalue }}</kbd></li>
                 </ul>
 
                 <figure style="width:90%; margin:auto;">
@@ -77,6 +79,8 @@
                     <li><strong>Mean io time (simulation)</strong> : <kbd>{{ mean_sim_iotime }}</kbd></li>
                     <li><strong>Pearson's correlation</strong> : <kbd>{{ iotime_correlation }}</kbd></li>
                     <li><strong>Cohen's d effect</strong> : <kbd>{{ iotime_cohend_effect }}</kbd></li>
+                    <li><strong>Z-test stat : </strong> : <kbd>{{ ztest_iotime_tstat }}</kbd> / <strong>Z-test
+                            pvalue</strong> : <kbd>{{ ztest_iotime_pvalue }}</kbd></li>
                 </ul>
 
                 <figure style="width:90%; margin:auto;">
